<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentHomePage.FragmentHomePage">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.sadam.ui4.MyVideoView
            android:id="@+id/videoViewHomePage"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/shape_video"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintCircleRadius="100dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            tools:visibility="gone" />

        <Button
            android:id="@+id/button"
            android:layout_width="@dimen/floatButtonWidth"
            android:layout_height="@dimen/floatButtonWidth"
            android:background="@drawable/live_brodcast"
            app:layout_constraintBottom_toBottomOf="@+id/tabLayout"
            app:layout_constraintEnd_toEndOf="@+id/videoViewHomePage"
            app:layout_constraintHorizontal_bias="0.03"
            app:layout_constraintStart_toStartOf="@+id/videoViewHomePage"
            app:layout_constraintTop_toTopOf="@+id/tabLayout" />

        <Button
            android:id="@+id/button2"
            android:layout_width="@dimen/floatButtonWidth"
            android:layout_height="@dimen/floatButtonWidth"
            android:background="@drawable/search"
            app:layout_constraintBottom_toBottomOf="@+id/tabLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.97"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tabLayout" />

        <SurfaceView
            android:id="@+id/surfaceView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:backgroundTint="#00897B"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="gone" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabLayout"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/videoViewHomePage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.002"
            app:tabIndicatorColor="#FFFFFF"
            app:tabIndicatorFullWidth="false"
            app:tabSelectedTextColor="@color/tabSelectedText"
            app:tabTextColor="@color/tabText">

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/areaPage" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/followPage" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tabItem3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recommendPage" />
        </com.google.android.material.tabs.TabLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerview_video"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible">

        </androidx.recyclerview.widget.RecyclerView>

        <TextView
            android:id="@+id/textview_brightness"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="屏幕亮度"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/videoViewHomePage"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.2" />

        <TextView
            android:id="@+id/textview_volume"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="音量调整"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/videoViewHomePage"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.3" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>